# photo-portfolio

./: .env.example  .gitignore  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  FLY_DEPLOYMENT.md  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  run.py  test_r2_connection.py  upload_to_r2.py
backend/app/: __init__.py  config.py  database.py  photo_service.py  routes.py  sync_service.py  thumbnail_service.py
backend/scripts/: init_database.py
frontend/: .dockerignore  Dockerfile  fly.toml  nginx.conf
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AlbumEditControls.css  AlbumEditControls.jsx  BulkActionsBar.css  BulkActionsBar.jsx  DeployButton.css  DeployButton.jsx  Lightbox.css  Lightbox.jsx  PhotoEditControls.css  PhotoEditControls.jsx  PhotoGrid.css  PhotoGrid.jsx  SyncButton.css  SyncButton.jsx
frontend/src/context/: EditModeContext.jsx
frontend/src/pages/: AlbumDetail.css  AlbumDetail.jsx  Albums.css  Albums.jsx  Home.css  Home.jsx
